--- a/index.html
+++ b/index.html
@@ -4,18 +4,100 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <title>First portfolio website</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/seperhero.png" type="image/x-icon">
 </head>
 <body>
-    <section>
-        <div>
-            <h1>stay focused on <span>mission 2022</span></h1>
+    <section class="half" id="first-section">
+        <div class="half-divided-section">
+            <h1>stay focused on <br><span class="orange-color">mission 2022</span></h1>
             <p>Being a student of Computer Science from 2018, I have learned a lot along the way. Now staying in China, there have been ups and downs in life but complete it was a fun journey. Always loved computer and before finish the graduation, want to be job ready.</p>
-            <a target="_blank" href="https://github.com/Antor1155/assignment-repo">Explore more</a>
+            <a target="_blank" href="https://github.com/Antor1155/assignment-repo" class="button">Explore more</a> <br>
+            <br>
+            <small>please scroll more to explore the page</small>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="half-divided-section">
+            <img src="images/person/person-4.png" alt="picture of the developer">
         </div>
     </section>
+
+    <section>
+        <h1 style="text-align: center; margin-bottom: 60px;">My mission in <span class="orange-color"> 2022</span></h1>
+        <div class="multiple-portion-part">
+            <div class="third-width" style="background-color: rgb(87, 166, 231);">
+                <img src="images/illustrators/illustrator-1.png" alt="illustration logo">
+                <h2>Mission</h2>
+                <p>My mission is to be a complete and well rounded web developer with front-end and back-end knowledge. To do that, now have taken a course on Programming Hero website. so present mission is to finish it first.</p>
+            </div>
+            <div class="third-width" style="background-color: plum;">
+                <img src="images/illustrators/illustrator-2.png" alt="illustration logo">
+                <h2>Vission</h2>
+                <p>First lets understand the difference between mission and vission. Vision is what I think I can aim for. Having a basic understanding of machine learnig, security and other aspect, my vision is to make a advance web platform</p>
+            </div>
+            <div class="third-width" style="background-color: rgb(145, 243, 88);">
+                <img src="images/illustrators/illustrator-3.png" alt="illustration logo">
+                <h2>Goal</h2>
+                <p>If talk about the main goal, " make the world a better place" and to achive this, need to connect to as much people as possible in short time where Internet really shines. Thats why my goal is to know web technology and my communicating people make world a better place </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="half" id="third-section">
+        <div class="half-divided-section">
+            <img src="images/pictures/coding.png" alt="people coding together">
+        </div>
+        <div class="half-divided-section">
+            <h2>Develop <br> Without Limits</h2>
+            <p>If someone with to be in the field of technology and Science he should have the mentality to learn life long with no boundary. With the help of community and gained knowledge through out the study of many heard , as a team we can make the development process without limitation. The only limit is the imagination.</p>
+            <a target="_blank" href="https://www.w3schools.com/whatis/" class="button">Read the documentaion</a>
+        </div>
+    </section>
+
+    <section class="half" id="fourth-section">
+        <div class="half-divided-section">
+            <h2>Know our <br>Global Community</h2>
+            <p>In my present situation I am a part of global community named Programming Hero. As a community we all together learnign and growing with knowledge and skill. This community is guided by the professional skilled prople in the field of technology and web-development.</p>
+            <a target="_blank" href="https://www.programming-hero.com/" class="button">Read the documentaion</a>
+        </div>
+        <div class="half-divided-section">
+            <img src="images/pictures/project.png" alt="people planning projects together">
+        </div>
+    </section>
+
+    <section>
+        <h1 style="text-align: center; margin-bottom: 60px;">As a hard working person, <span class="orange-color">My Achivements</span></h1>
+        <div class="multiple-portion-part">
+            <div class="achive" style="background-color: rgb(233, 198, 41);">
+                <img src="images/courses/google.jpg" alt="certificate from google">
+                <h2 class="center-text">Google</h2>
+            </div>
+            <div class="achive" style="background-color: rgb(87, 166, 231);">
+                <img src="images/courses/Coursera introduction to cloud computing_page-0001.jpg" alt="certificate from IBM">
+                <h2 class="center-text">IBM</h2>
+            </div>
+            <div class="achive" style="background-color: rgb(241, 50, 50);">
+                <img src="images/courses/penn.jpg" alt="certificate from peen university">
+                <h2 class="center-text">Penn</h2>
+            </div>
+            <div class="achive" style="background-color: rgb(25, 177, 70);">
+                <img src="images/courses/duke.jpg" alt="certificate from duke university">
+                <h2 class="center-text">DUKE</h2>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div>
+        <h2 class="center-text" style="color: white; font-family: 'Playfair Display', serif;">Mission <span style="color: red;">2022</span></h2>
+        <p style="color: white; text-align: center;">Work hard with skilled mind to make the world beautiful place</p>
+        </div>
+    </footer>
 </body>
 </html>
