final spelling check

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="half" id="first-section">
         <div class="half-divided-section">
             <h1>stay focused on <br><span class="orange-color">mission 2022</span></h1>
-            <p>Being a student of Computer Science from 2018, I have learned a lot along the way. Now staying in China, there have been ups and downs in life but complete it was a fun journey. Always loved computer and before finish the graduation, want to be job ready.</p>
+            <p>Being a student of Computer Science from 2018, I have learned a lot along the way. Now staying in China, there have been ups and downs in life but it was a fun journey. Always loved computer and before finish the graduation, want to be job ready.</p>
             <a target="_blank" href="https://github.com/Antor1155/assignment-repo" class="button">Explore more</a> <br>
             <br>
             <small>please scroll more to explore the page</small>
@@ -39,12 +39,12 @@
             <div class="third-width" style="background-color: plum;">
                 <img src="images/illustrators/illustrator-2.png" alt="illustration logo">
                 <h2>Vission</h2>
-                <p>First lets understand the difference between mission and vission. Vision is what I think I can aim for. Having a basic understanding of machine learnig, security and other aspect, my vision is to make a advance web platform</p>
+                <p>First lets understand the difference between mission and vission. Vision is what I think I can aim for. Having a basic understanding of machine learnig, security and other aspect, my vision is to make a advance web platform.</p>
             </div>
             <div class="third-width" style="background-color: rgb(145, 243, 88);">
                 <img src="images/illustrators/illustrator-3.png" alt="illustration logo">
                 <h2>Goal</h2>
-                <p>If talk about the main goal, " make the world a better place" and to achive this, need to connect to as much people as possible in short time where Internet really shines. Thats why my goal is to know web technology and my communicating people make world a better place </p>
+                <p>If talk about the main goal, " make the world a better place" and to achive this, need to connect to as much people as possible in short time where Internet really shines. Thats why my goal is to know web technology and by communicating people make world a better place </p>
             </div>
         </div>
     </section>
@@ -55,7 +55,7 @@
         </div>
         <div class="half-divided-section">
             <h2>Develop <br> Without Limits</h2>
-            <p>If someone with to be in the field of technology and Science he should have the mentality to learn life long with no boundary. With the help of community and gained knowledge through out the study of many heard , as a team we can make the development process without limitation. The only limit is the imagination.</p>
+            <p>If someone want to be in the field of technology and Science he should have the mentality to learn life long with no boundary. With the help of community and gained knowledge through out the study of many years, as a team we can make the development process without limitation. The only limit is the imagination.</p>
             <a target="_blank" href="https://www.w3schools.com/whatis/" class="button">Read the documentaion</a>
         </div>
     </section>
@@ -63,7 +63,7 @@
     <section class="half" id="fourth-section">
         <div class="half-divided-section">
             <h2>Know our <br>Global Community</h2>
-            <p>In my present situation I am a part of global community named Programming Hero. As a community we all together learnign and growing with knowledge and skill. This community is guided by the professional skilled prople in the field of technology and web-development.</p>
+            <p>In my present situation I am a part of global community named Programming Hero. As a community we all together learnign and growing with knowledge and skill. This community is guided by the professional skilled people in the field of technology and web-development.</p>
             <a target="_blank" href="https://www.programming-hero.com/" class="button">Read the documentaion</a>
         </div>
         <div class="half-divided-section">
